# AirCom

./: .gitignore  AirCom.proto  BUILD_README.md  CONTRIBUTING.md  MANUAL_INSTALL.md  README.md  README_FLEXIBLE_ARCHITECTURE.md  XIAO_ESP32_README.md  build_project.bat  build_setup.bat  generate_protobuf.bat  install_python.bat  interactive_gui_preview.bat  partitions.csv  platformio.ini  prepare_and_build.bat  quick_build.bat  run_gui_preview.bat  setup_and_build.bat  simple_build.bat  simple_gui_preview.bat
components/HaLowManager/: CMakeLists.txt  HaLowMeshManager.cpp
components/HaLowManager/include/: HaLowMeshManager.h  mm_iot_sdk.h
components/HaLowManager/src/: mm_iot_sdk.cpp
components/Heltec-HaLow/include/: heltec_halow.h
components/MM-IoT-SDK/: CMakeLists.txt
components/MM-IoT-SDK/include/: mm_iot_sdk.h  mm_iot_sdk_halow.h
components/MM-IoT-SDK/src/: mm_iot_sdk.cpp
components/Opus/: CMakeLists.txt
components/Opus/include/: audio_codec.h  opus.h
components/Opus/src/: audio_codec.c
components/TinyGPSxx/: CMakeLists.txt  TinyGPS++.cpp
components/TinyGPSxx/include/: TinyGPS++.h
components/aircom_proto/: AirCom.pb-c.h  CMakeLists.txt
components/bt_audio/: CMakeLists.txt  bt_audio.cpp
components/bt_audio/include/: bt_audio.h
components/libsodium/: CMakeLists.txt
components/libsodium/src/libsodium/include/: sodium.h
components/libsodium/src/libsodium/randombytes/sysrandom/: randombytes_sysrandom.c
components/libsodium/src/libsodium/sodium/: core.c
components/u8g2/: CMakeLists.txt
components/u8g2/csrc/: u8g2.h  u8x8.h
components/u8g2_esp32_hal/: CMakeLists.txt
components/u8g2_esp32_hal/include/: u8g2_esp32_hal.h
components/u8g2_esp32_hal/src/: u8g2_esp32_hal.c
main/: CMakeLists.txt  Kconfig.projbuild  SecurityManager.cpp  atak_processor_task.cpp  atak_task.cpp  audio_task.cpp  bt_audio.cpp  button_handler.cpp  camera_service.cpp  config_manager.cpp  crypto.cpp  error_handling.c  gps_task.cpp  gui_preview.cpp  gui_tester.cpp  logging_system.cpp  main.cpp  memory_tracker.cpp  network_health_task.cpp  network_task.cpp  network_utils.c  network_utils.cpp  ota_updater.cpp  safe_callback.cpp  shared_data.cpp  ui_task.cpp  xiao_integration_test.cpp
main/include/: SecurityManager.h  atak_processor_task.h  atak_task.h  audio_task.h  bt_audio.h  button_handler.h  camera_service.h  config.h  config_manager.h  crypto.h  error_handling.h  gps_task.h  gui_tester.h  halow_factory.h  halow_interface.h  logging_system.h  memory_tracker.h  network_health_task.h  network_task.h  network_utils.h  ota_updater.h  safe_callback.h  shared_data.h  ui_task.h  xiao_esp32_config.h
main/proto/: AirCom.proto
